# caravel-ai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  example_env.txt  pyproject.toml  test.py
src/caravel/baml/: Runner.py
src/caravel/baml/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
src/caravel/baml/baml_src/: APITransform.baml  APIUtil.baml  Dynamic.baml  Intent.baml  MakePath.baml  generators.baml
src/caravel/http/: Client.py  auth.py
src/caravel/parsing/: Parser.py  SchemaAdder.py  parse.py
src/caravel/registry/: CaravelRegistry.py  caravel_registry.py
tests/parsing/: test_Parser.py
tests/registry/: test_CaravelRegistry.py
