[project]
name = "caravel"
version = "0.1.0"
description = ""
authors = [
    {name = "cannonhutcheson",email = "cmh96658@uga.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "caravel", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
